P3/test/pl0/error/error17.pl0
var a;

begin
	begin
		a:=1.
end.
